--- a/pom.xml
+++ b/pom.xml
@@ -464,10 +464,17 @@
 					<minimumTokens>25</minimumTokens>
 		        </configuration>
       		</plugin>
+      		
+      		<!-- codehaus 플러그인 -->
     		<plugin>
             	<groupId>org.codehaus.mojo</groupId>
             	<artifactId>cobertura-maven-plugin</artifactId>
             	<version>2.7</version>
+      	        <configuration>
+	        		<formats>
+						<format>xml</format>
+		        	</formats>
+		        </configuration>
         	</plugin>
         </plugins>
     </reporting>
