--- a/pom.xml
+++ b/pom.xml
@@ -476,6 +476,13 @@
 		        	</formats>
 		        </configuration>
         	</plugin>
+        	
+        	<!-- JDEPAND 플러그인 -->
+        	<plugin>
+        		<groupId>org.codehaus.mojo</groupId>
+        		<artifactId>jdepend-maven-plugin</artifactId>
+        		<version>2.0</version>
+      		</plugin>
         </plugins>
     </reporting>
 
