--- a/pom.xml
+++ b/pom.xml
@@ -483,6 +483,13 @@
         		<artifactId>jdepend-maven-plugin</artifactId>
         		<version>2.0</version>
       		</plugin>
+      		
+      		<!-- JavaNCSS 플러그인 -->
+      		<plugin>
+          		<groupId>org.codehaus.mojo</groupId>
+          		<artifactId>javancss-maven-plugin</artifactId>
+          		<version>2.1</version>
+        	</plugin>
         </plugins>
     </reporting>
 
